# simulacrum

./: Cargo.toml  Makefile  README.org
roadmap/: simulacrum.org
src/: main.rs
src/renderer/: Cargo.toml
src/renderer/src/: lib.rs
