[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { version = "0.34.1"}
raw-window-handle = "0.6.0"
vulkano-shaders = "0.34.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
